Show 2017 speakers and fix spacing issues in speaker grid

--- a/app/scss/SpeakerGrid.scss
+++ b/app/scss/SpeakerGrid.scss
@@ -10,7 +10,11 @@
     height: auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+
+    @media #{$mobile} {
+      width: 80%;
+    }
 
     &::after {
      content: " ";
